tests/paczka1/fuzzy1/26764768.err
Error in line 2: RoPu02x S672 70,8
Error in line 5: RoPu02x S55 67,5
Error in line 7: RoPu02x S264 28,0
Error in line 11: RmaOUWx S264 43,0
Error in line 9: RoPu02x S55 32,1
Error in line 20: RoPu02x S369 55,1
Error in line 28: RmaOUWx S672 11,8
Error in line 30: T4K S55 86,3
